--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,12 +5,16 @@
 */
 
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
-}
-
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+  --background-image: url("../images/cover-image-dark.png");
+  --active-button-color: rgba(255, 0, 112, 0.4);
+  --button-color: #FF0070;
+  --accent-color: #FF0070;
+  --background-color: #000028;
+  --title-color: #DB00FF;
+  --title-text-color: #000028;
+  --text-color: #F1B2CE;
+  --posttitle-text-color: var(--title-text-color);
+  --topic-title: var(--accent-color);
+  --border-color: var(--accent-color);
+  --is-light: visible;
 }
