--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,463 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  background-color: var(--background-color);
+  font-family: 'IBM Plex mono', sans-serif;
+  width: 375px;
+}
+
+/* ХЭДЕР */
+
+.decorated-zone::before {
+  margin-inline-start: 330px;
+  position: absolute;
+  content: '';
+  justify-self: center;
+  inline-size: 25px;
+  block-size: 25px;
+  border-inline-end: 1px solid var(--border-color);
+  border-block-start: 1px solid var(--border-color);
+}
+
+.decorated-zone::after {
+  position: absolute;
+  content: '';
+  margin-block-start: 30px;
+  inline-size: 25px;
+  block-size: 25px;
+  border-inline-start: 1px solid var(--border-color);
+  border-block-end: 1px solid var(--border-color);
+}
+
+.header {
+  padding: 10px;
+  height: 100vh;
+  background: fixed var(--background-image);
+  background-position: bottom;
+  background-size: contain;
+}
+
+.header__darkthemed_decoration {
+  position: absolute;
+  visibility: var(--is-light);
+  justify-self: end;
+  inline-size: 52px;
+  top: 10px;
+  margin-inline-end: 8px;
+  text-transform: uppercase;
+  font-size: 18px;
+  color: var(--accent-color);
+}
+
+.header__darkthemed_decoration::after {
+  position: inherit;
+  align-self: center;
+  content: '';
+  inline-size: 10px;
+  block-size: 10px;
+  bottom: 6px;
+  right: 0;
+  background-color: var(--accent-color);
+  border-radius: 50%;
+  filter: drop-shadow(0 0 4px var(--accent-color));
+}
+
+.header__theme-menu-button {
+  padding: 0 13px 2px 13px;
+  background-color: transparent;
+  border: transparent;
+  cursor: pointer;
+  text-transform: lowercase;
+  color: var(--button-color);
+}
+
+.header__theme-menu {
+  justify-self: end;
+}
+
+.header__theme-menu-list {
+    padding-top: 65px;
+    display: grid;
+    gap: 10px;
+  }
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--active-button-color);
+  pointer-events: none;
+}
+
+.header__theme-menu-button:hover:not(.header__theme-menu-button_active) {
+  border: 1px solid var(--button-color);
+}
+
+.header__theme-menu-button {
+  font-weight: 400px;
+  font-size: 18px;
+}
+
+.header__title {
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  line-height: 83%;
+  color: var(--title-color);
+  text-shadow: 4px 4px 0 var(--accent-color);
+  padding: 65px 0 53px 0;
+  text-transform: lowercase;
+}
+
+.header__text {
+  justify-content: end;
+  margin-block-start: -6px;
+  font-size: 18px;
+  background-color: var(--accent-color);
+  color: var(--posttitle-text-color);
+  font-weight: bold;
+}
+
+/* -- ОСНОВА */
+
+.main__topics {
+  padding: 10px;
+  padding-block: 40px;
+}
+
+.main__topic-first-question, .main__topic-question, .main__topic-question-accent {
+  color: var(--topic-title);
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.main__topics-list {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.main__topic-list-section {
+  padding-block-start: 19px;
+  gap: 20px;
+  display: grid;
+}
+
+.main__topic-question-accent {
+  background-color: var(--accent-color);
+  color: var(--title-text-color);
+}
+
+.main__topic-title {
+  color: var(--title-text-color);
+  font-size: 18px;
+  font-weight: bold;
+  background-color: var(--accent-color);
+}
+
+.main__topic-pretitle {
+  color: var(--title-text-color);
+  font-weight: normal;
+  font-size: 18px;
+  background-color: var(--accent-color);
+}
+
+.main__topic-pretitle-list-section {
+    display: grid;
+    margin-block-start: 20px;
+    gap: 20px;
+  }
+
+.main__topic-content {
+  padding-block-start: 10px;
+  color: var(--text-color);
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 23.4px;
+}
+
+.main__link-content {
+  text-shadow: 2px 2px 0 var(--accent-color);
+  text-decoration: none;
+}
+
+.main__link-content:hover {
+  text-shadow: 2px 2px 0 var(--accent-color);
+  border-block-end: 1.5px solid var(--text-color);
+}
+
+.main__topic-image-first {
+  padding-block-start: 10px;
+}
+
+.main__topic-image-list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+/* ПОДВАЛ */
+
+.footer__focus-screen::before {
+  position: absolute;
+  content: '';
+  inline-size: 25px;
+  block-size: 25px;
+  border-inline-end: 1px solid var(--border-color);
+  border-block-start: 1px solid var(--border-color);
+  margin-block-start: -246px;
+  margin-inline-start: 330px;
+}
+
+.footer__focus-screen::after {
+  position: absolute;
+  content: '';
+  inline-size: 25px;
+  block-size: 25px;
+  border-inline-start: 1px solid var(--border-color);
+  border-block-end: 1px solid var(--border-color);
+  margin-block-start: 225px;
+}
+
+.footer__focus-screen {
+  align-content: center;
+  margin-inline: 10px;
+  height: 100vh;
+}
+
+.footer__title {
+  justify-self: center;
+  text-transform: lowercase;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  color: var(--title-color);
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+@media (width >= 768px) {
+  .page {
+      width: 768px;
+  }
+
+  .header {
+    padding: 20px;
+    padding-inline-start: 0;
+    height: 1024px;
+  }
+
+  .decorated-zone::before {
+    margin-inline-start: 723px;
+    top: 19px;
+
+  }
+
+  .decorated-zone::after {
+    margin-inline-start: 20px;
+    margin-block-start: 138px;
+  }
+
+  .header__darkthemed_decoration {
+    top: 21px;
+  }
+
+  .header__theme-menu-list {
+    margin-block-start: 108px;
+  }
+
+  .header__title {
+    font-size: (7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    padding-block-start: 173px;
+    padding-inline-start: 0;
+  }
+
+  .header__text {
+    margin-block-start: 107px;
+    width: 364px;
+    justify-self: end;
+  }
+
+  .main__topics {
+    padding-inline: 20px;
+    margin-block-start: 20px;
+  }
+
+  .main__topics-list {
+    display: flex;
+    flex-direction: column;
+    gap: 80px;
+  }
+
+  .main__topic-pretitle-list-section {
+    display: grid;
+    margin-block-start: 20px;
+    gap: 20px;
+  }
+
+  .main__topic-list-section {
+    margin-block-start: 20px;
+  }
+
+  .main__topic-content-out .main__topic-list-section {
+    margin-block-start: 0;
+  }
+
+  .main__topic-question {
+    width: 236px;
+    padding-block-start: 0;
+  }
+
+  .main__topic-list-section {
+    padding-block-start: 0;
+  }
+
+  .main__topic-content-out .main__topic-question,  .main__topic-first-question {
+    position: absolute;
+    width: 236px;
+  }
+
+  .main__topic-content-out .main__topic-content, .main__topic-content-out .main__topic-title, .main__topic-content-out .main__topic-pretitle {
+    width: 472px;
+    justify-self: end;
+  }
+
+  .main__topic-question-accent {
+    margin-block-end: 20px;
+  }
+
+  .main__topic-image-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-flow: column;
+    gap: 0;
+  }
+
+  .main__topic-image, .main__topic-image-first {
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .main__topic-image-first:nth-child(1) {
+    grid-column: 1 / 3;
+    padding-block-end: 20px;
+  }
+  
+  .main__topic-image:nth-child(2) {
+    grid-column: 3 / 4;
+    grid-row: 1 / 4;
+    padding-inline-start: 20px;
+  }
+
+  .main__topic-image:nth-child(3) {
+    grid-column: 1 / 1;
+    grid-row: 3 / 5;
+    padding-inline-end: 20px;
+  }
+
+  .main__topic-image:nth-child(4) {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+  }
+
+  .main__topic-image:nth-child(5) {
+    grid-column: 2 / 4;
+    grid-row: 4 / 5;
+    padding-block-start: 20px;
+  }
+
+  .footer__focus-screen {
+      margin-inline: 20px;
+  }
+
+  .footer__focus-screen::before {
+    position: absolute;
+    content: '';
+    inline-size: 25px;
+    block-size: 25px;
+    border-inline-end: 1px solid var(--border-color);
+    border-block-start: 1px solid var(--border-color);
+    margin-block-start: -420px;
+    margin-inline-start: 703px;
+  }
+
+  .footer__focus-screen::after {
+    position: absolute;
+    content: '';
+    inline-size: 25px;
+    block-size: 25px;
+    border-inline-start: 1px solid var(--border-color);
+    border-block-end: 1px solid var(--border-color);
+    margin-block-start: 386px;
+  }
+}
+
+@media (width >= 1024px) {
+  .page {
+      width: 1024px;
+  }
+
+  .header {
+    height: 768px;
+  }
+
+  .header__theme-menu {
+    justify-self: center;
+    margin-block-start: -108px;
+    padding-inline-start: 20px;
+  }
+
+  .header__theme-menu-list {
+      padding-block-start: 0;
+      display: flex;
+      gap: 10px;
+    }
+
+  .decorated-zone::before {
+    margin-inline-start: 979px;
+    justify-self: end;
+  }
+
+  .decorated-zone::after {
+    margin-block-start: 90px;
+  }
+
+  .header__title {
+    font-size: 157px;
+    padding-block-start: 270px;
+  }
+
+  .header__text {
+    margin-block-start: 62px;
+    width: 491px;
+  }
+
+  .main__topic-question,  .main__topic-first-question, .main__topic-content-out .main__topic-question {
+    width: 315px;
+  }
+
+  .main__topic-content-out .main__topic-content, .main__topic-content-out .main__topic-title, .main__topic-content-out .main__topic-pretitle {
+    width: 649px;
+  }
+
+  .main__topic-pretitle-list-section {
+    gap: 21px;
+  }
+
+  .main__topic-content-in .main__topic-list-section{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .footer__focus-screen {
+    margin-inline: 20px;
+    height: 768px;
+  }
+
+  .footer__focus-screen::before {
+    margin-block-start: -263px;
+    margin-inline-start: 959px;
+  }
+
+  .footer__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .footer__focus-screen::after {
+    margin-block-start: 235px;
+  }
 }
